--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
+    "sass": "^1.56.0",
+    "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   }
