--- a/package/package.json
+++ b/package/package.json
@@ -6,6 +6,14 @@
     "email": "whaleluo@163.com"
   },
   "description": "A print preview module that simulates chrome browser",
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/whaleluo/electron-print-preview.git"
+	},
+	"homepage": "https://github.com/whaleluo/electron-print-preview",
+	"bugs": {
+		"url": "https://github.com/whaleluo/electron-print-preview/issues"
+	},
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode=production"
