--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-print-preview",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "author": {
     "name": "jingyu",
     "email": "whaleluo@163.com"
@@ -32,6 +32,9 @@
   ],
   "engines": {
     "node": ">=10.0.0"
+  },
+  "dependencies":{
+    "electron": ">=11.5.0"
   },
   "devDependencies": {
     "webpack": "^5.75.0",
