--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-print-preview",
-  "version": "2.0",
+  "version": "2.0.0",
   "author": {
     "name": "yj",
     "email": "whaleluo@163.com"
@@ -46,10 +46,6 @@
   },
   "scripts": {
     "start": "rollup -c --bundleConfigAsCjs && electron ./dist/example.js",
-    "build": "rollup -c --bundleConfigAsCjs",
-    "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build",
-    "run": "node src/main.js"
+    "build": "rollup -c --bundleConfigAsCjs"
   }
 }
