--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-print-preview",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": {
     "name": "yj",
     "email": "whaleluo@163.com"
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/whaleluo/electron-print-preview/issues"
   },
-  "main": "dist/print/printPreview.js",
+  "main": "dist/print/index.js",
   "license": "MIT",
   "files": [
     "dist"
